# behavioral-interviews-mock

./: README.md
backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: response.py  routes.py
backend/app/core/: core.py
backend/app/db/: prompt_template.py  questions.py
backend/app/ml_models/: gemini2.py  whisper.py
backend/app/models/: chat.py
backend/app/utils/: save_user_input.py  sde_prompt_template.py
frontend/: package.json
frontend/app/: audiorecorder.tsx  button.tsx  globals.css  page.tsx
lord_ferris_rs/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile_gemini  Makefile  railway.json  start.sh
lord_ferris_rs/src/: config.rs  lib.rs  main.rs  prompts.rs  state.rs
lord_ferris_rs/src/models/: groq.rs  incoming.rs  mod.rs  questions.rs  state.rs  task.rs
lord_ferris_rs/src/routes/: incoming.rs  mod.rs  questions.rs  sse.rs
lord_ferris_rs/src/services/: gemini.rs  groq.rs  mod.rs  process.rs  questions.rs
lord_ferris_rs/src/utils/: constants.rs  mod.rs  questions.rs  rate_limit.rs
notebooks/: gemma_chat_server.ipynb
