[package]
name = "lord_ferris_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8", features = ["macros"] }
dashmap = "6.1"
futures-util = "0.3"
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1.44"
uuid = { version = "1.20", features = ["v4"] }

google-cloud-secretmanager-v1 = "1.4.0"
google-cloud-gax = "1.6.0"
google-cloud-auth = "1.5.0"
gcp_auth = "0.12.6"
config = "0.15.19"
tracing-subscriber = "0.3.22"
axum_typed_multipart = "0.16.5"
chrono = { version = "0.4.43", features = ["serde"] }
rand = "0.10.0"
url = "2.5.0"

[dependencies.google-cloud-aiplatform-v1]
version = "1.6.0"
default-features = false
features = ["prediction-service"]
